# task-manager-hexlet-project-4

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lmy-lint-check.yml  my-lint-check.yml
home/: urls.py  views.py
home/templates/: base.html
home/templates/home/: index.html
home/templates/includes/: footer.html  navbar.html
labels/: models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: label_create.html  label_delete_confirm.html  label_update.html  labels_list.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: status_create.html  status_delete_confirm.html  status_update.html  statuses_list.html
task_manager/: settings.py  urls.py  utils.py  views.py
task_manager/task_manager/: settings.py  urls.py  views.py  wsgi.py
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0003_alter_task_author.py  0004_alter_task_author.py  0005_tasklabelrelation_task_labels_tasklabelrelation_task.py
tasks/templates/tasks/: task_create.html  task_delete_confirm.html  task_detail.html  task_details.html  task_update.html  tasks_list.html
templates/: base.html
templates/includes/: footer.html  navbar.html
users/: forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: create.html  create_user.html  delete.html  delete_user_confirm.html  home_page.html  index.html  login.html  (+3 more)
(+1 files in other folders)
