[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maks <kmv80@yandex.ru>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"

[tool.poetry.dev-dependencies]
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
