[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maks <kmv80@yandex.ru>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
django-bootstrap4 = "^21.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
