[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Maks <kmv80@yandex.ru>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.1"
django-heroku = "^0.3.1"
gunicorn = "^20.1.0"
django-bootstrap4 = "^21.2"
django-filter = "^21.1"
python-dotenv = "^0.19.2"
django-extensions = "^3.1.5"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
playwright = "^1.19.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
